--- a/tables.html
+++ b/tables.html
@@ -34,7 +34,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.html">
                 <!--<div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>-->
@@ -44,12 +44,13 @@
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
 
-            <!-- Nav Item - Dashboard -->
+            <!-- Nav Item - Dashboard
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
+            -->
 
             <!-- Divider -->
             <hr class="sidebar-divider">
@@ -59,7 +60,6 @@
                 Admin
             </div>
 
-            <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -68,9 +68,9 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <h6 class="collapse-header">Manage environment</h6>
+                        <a class="collapse-item" href="buttons.html">Notifications</a>
+                        <a class="collapse-item" href="cards.html">Site operators</a>
                     </div>
                 </div>
             </li>
@@ -216,43 +216,8 @@
                             <!-- Dropdown - Alerts -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="alertsDropdown">
-                                <h6 class="dropdown-header">
-                                    Alerts Center
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-primary">
-                                            <i class="fas fa-file-alt text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 12, 2019</div>
-                                        <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-success">
-                                            <i class="fas fa-donate text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 7, 2019</div>
-                                        $290.29 has been deposited into your account!
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-warning">
-                                            <i class="fas fa-exclamation-triangle text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 2, 2019</div>
-                                        Spending Alert: We've noticed unusually high spending for your account.
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+
+
                             </div>
                         </li>
 
@@ -265,61 +230,7 @@
                                 <span class="badge badge-danger badge-counter">7</span>
                             </a>
                             <!-- Dropdown - Messages -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="messagesDropdown">
-                                <h6 class="dropdown-header">
-                                    Message Center
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_1.svg"
-                                            alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div class="font-weight-bold">
-                                        <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                                            problem I've been having.</div>
-                                        <div class="small text-gray-500">Emily Fowler · 58m</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_2.svg"
-                                            alt="...">
-                                        <div class="status-indicator"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">I have the photos that you ordered last month, how
-                                            would you like them sent to you?</div>
-                                        <div class="small text-gray-500">Jae Chun · 1d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_3.svg"
-                                            alt="...">
-                                        <div class="status-indicator bg-warning"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Last month's report looks great, I am very happy with
-                                            the progress so far, keep up the good work!</div>
-                                        <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
-                                            alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Am I a good boy? The reason I ask is because someone
-                                            told me that people say this to all dogs, even if they aren't good...</div>
-                                        <div class="small text-gray-500">Chicken the Dog · 2w</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
-                            </div>
+                          
                         </li>
 
                         <div class="topbar-divider d-none d-sm-block"></div>
@@ -328,9 +239,9 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Captain Phillips</span>
                                 <img class="img-profile rounded-circle"
-                                    src="img/undraw_profile.svg">
+                                    src="img/michele.jpg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -366,7 +277,10 @@
                     <!-- Page Heading -->
                     <h1 class="h3 mb-2 text-gray-800">EMOTRON Summary</h1>
                     <p class="mb-4">Ship is now at your hands.  <a target="_blank"
-                            href="https://datatables.net">Please read the fucking manual before using this</a>.</p>
+                            href="https://www.giardinaggio.net/giardinaggio/giardinaggio/giardinaggio-un-hobby-gratificante.asp">Please read the manual to know all the features of Emotron.</a></p>
+                    <p class="mb-4">This is the summary page. Here you can have an overview of all the Ship Environments, with a direct view on
+                      area of interests. By clicking on an Environment, you will land on the dedicated page, where more info are available.
+                    </p>
 
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
@@ -381,7 +295,8 @@
                                             <th>Environment</th>
                                             <th>Safety Warnings</th>
                                             <th>Entertainment Warnings</th>
-                                            <th>People</th>
+                                            <th>Estimated People</th>
+                                            <th>Pending requests</th>
                                         </tr>
                                     </thead>
                         <!--            <tfoot>
@@ -396,37 +311,42 @@
                                     </tfoot> -->
                                     <tbody>
                                         <tr>
-                                            <td>Deck 1</td>
+                                            <td><a target="_blank" href="dashboard.html">Deck 1</a></td>
                                             <td>0</td>
-                                            <td>9</td>
+                                            <td style="color:#000000;background-color:#ff6666">10</td>
                                             <td>142</td>
+                                            <td>0</td>
                                         </tr>
                                         <tr>
-                                          <td>Deck 2</td>
+                                          <td><a target="_blank" href="dashboard.html">Deck 2</a></td>
                                           <td>0</td>
-                                          <td>7</td>
+                                          <td>3</td>
                                           <td>381</td>
+                                          <td>3</td>
 
                                         </tr>
                                         <tr>
-                                          <td>Swimming Pool</td>
-                                          <td>1</td>
-                                          <td>8</td>
+                                          <td><a target="_blank" href="dashboard.html">Swimming Pool</a></td>
+                                          <td>0</td>
+                                          <td style="color:#000000;background-color:#ffe680">8</td>
                                           <td>123</td>
+                                          <td>1</td>
 
                                         </tr>
                                         <tr>
-                                          <td>Shopping</td>
-                                          <td>1</td>
+                                          <td><a target="_blank" href="dashboard.html">Shopping</a></td>
+                                          <td style="color:#000000;background-color:#ffe680">1</td>
                                           <td>2</td>
                                           <td>436</td>
+                                          <td>2</td>
 
                                         </tr>
                                         <tr>
-                                          <td>Casino</td>
-                                          <td>2</td>
-                                          <td>5</td>
+                                          <td><a target="_blank" href="dashboard.html">Casino</a></td>
+                                          <td style="color:#000000;background-color:#ff6666">2</td>
+                                          <td>0</td>
                                           <td>59</td>
+                                          <td>5</td>
 
                                         </tr>
                                     </tbody>
@@ -445,7 +365,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2020</span>
+                        <span>Copyright &copy; Emotron 2021</span>
                     </div>
                 </div>
             </footer>
