--- a/dashboard.html
+++ b/dashboard.html
@@ -71,8 +71,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Manage environment</h6>
-                        <a class="collapse-item" href="buttons.html">Notifications</a>
-                        <a class="collapse-item" href="cards.html">Site operators</a>
+                        <a class="collapse-item" href="#">Notifications</a>
+                        <a class="collapse-item" href="#">Site operators</a>
                     </div>
                 </div>
             </li>
@@ -173,7 +173,7 @@
                                 <span class="badge badge-danger badge-counter">7</span>
                             </a>
                             <!-- Dropdown - Messages -->
-                      
+
                         </li>
 
                         <div class="topbar-divider d-none d-sm-block"></div>
